<resources>
    <string name="app_name">Move Booking App</string>
    <string name="data_provided_by_myvue">Data provided by MyVue and Picsum</string>
    <string name="select_seats">Select seats:</string>
    <string name="running_time">Running time:</string>
    <string name="starring">Starring:</string>
    <string name="seats_remaining">%1$d Seats remaining</string>
    <string name="tickets_hub">Tickets Hub</string>
    <string name="sold_out">Sold out</string>
    <string name="seats_selected">%1$d Seats selected</string>
    <string name="filling_fast">Filling Fast</string>
    <string name="card_image">Card image</string>
    <string name="icon">icon</string>
    <string name="main_image">Main image</string>
    <string name="movie_image">Movie image</string>

</resources>