<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/hero_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/main_image"/>

    <TextView
        android:id="@+id/hero_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tickets_hub"
        android:textColor="@color/teal_200"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:shadowColor="#000"
        android:shadowDx="6"
        android:shadowDy="6"
        android:shadowRadius="8"
        app:layout_constraintBottom_toBottomOf="@+id/hero_image"
        app:layout_constraintEnd_toEndOf="@+id/hero_image"
        app:layout_constraintStart_toStartOf="@+id/hero_image"
        app:layout_constraintTop_toTopOf="@+id/hero_image" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/movie_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/data_credits"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hero_image" />

    <TextView
        android:id="@+id/data_credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_provided_by_myvue"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
